PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jul 2010, PHP 5.3.3


15 Jul 2010, PHP 5.3.3 RC3
- Rewrote var_export() to use smart_str rather than output buffering, prevents
  data disclosure if a fatal error occurs. (Scott)

- Fixed bug #52262 (json_decode() shows no errors on invalid UTF-8).
  (Scott)
- Fixed bug #52240 (hash_copy() does not copy the HMAC key, causes wrong
  results and PHP crashes). (Felipe)
- Fixed bug #52238 (Crash when an Exception occured in iterator_to_array).
  (Johannes)
- Fixed bug #52037 (Concurrent builds fail in install-programs). (seanius at 
  debian dot org, Kalle)
- Fixed bug #51943 (AIX: Several files are out of ANSI spec). (Kalle, 
  coreystup at gmail dot com)
- Fixed bug #51697 (Unsafe operations in free_storage of SPL iterators,
  causes crash during shutdown). (Etienne)

01 Jul 2010, PHP 5.3.3 RC2
- Fixed SplObjectStorage unserialization problems (CVE-2010-2225). (Stas)

- Implemented FR #51295 (SQLite3::busyTimeout not existing). (Mark)

- Fixed the mail.log ini setting when no filename was given. (Johannes)

- Fixed bug #52193 (converting closure to array yields empty array). (Felipe)
- Fixed bug #52183 (Reflectionfunction reports invalid number of arguments for
  function aliases). (Felipe)
- Fixed bug #52162 (custom request header variables with numbers are removed). 
  (Sriram Natarajan)
- Fixed bug #52160 (Invalid E_STRICT redefined constructor error). (Felipe)
- Fixed bug #52138 (Constants are parsed into the ini file for section names).
  (Felipe)
- Fixed bug #52115 (mysqli_result::fetch_all returns null, not an empty array).
  (Andrey)
- Fixed bug #49216 (Reflection doesn't seem to work properly on MySqli). (Andrey)
- Fixed bug #48930 (__COMPILER_HALT_OFFSET__ incorrect in PHP >= 5.3). (Felipe)
- Fixed bug #33210 (getimagesize() fails to detect width/height on certain 
  JPEGs). (Ilia)
